2015-02-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/{Blob.cpp, Image.cpp}: Incorrect lock scope
	resulted in Magick++ locking not actually working to protect
	critical sections in spite of no detected problems with locking
	these past 16 years.  Problem was detected using the
	misc-unused-raii check from clang-tidy and was reported by Hyrum
	Wright.

	* coders/palm.c (ReadPALMImage): Add header logging to writer.
	Writer still seeks and overwrites its own header so logging is not
	entirely accurate yet.

2015-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Update GNU libtool to 2.4.6.

	* coders/palm.c (ReadPALMImage): Fix support for transparency in
	PALM reader.

2015-02-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/palm.c (ReadPALMImage): Major re-work of PALM reader.
	More log message improvements.  More header validation.

2015-02-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/palm.c (ReadPALMImage): Improve log messages.  Add more
	header validation.  Check image pixel limits.  Support 'ping'
	mode.

2015-02-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/palm.c (ReadPALMImage): PALM reader now supports 1, 2, 4,
	8, and 16-bit test files we were able to generate using
	'pnmtopalm'.  A progress monitor was added.  Memory leaks in error
	paths were fixed.

2015-02-12  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Insert "if (QuantumTick(...))" ahead of
	each "if (!MagickMonitorFormatted(...)".

2015-02-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/rla.c (ReadRLAImage): Assure that header ASCII strings
	are properly terminated.  Resolves Coverity CID 10322.

2015-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.h (STDERR_FILENO): Provide definitions for
	standard POSIX file numbers so that Visual Studio should compile.
	Fixes SourceForge bug #291 "STDERR_FILENO (used in magick.c) is