@@ -38,6 +38,9 @@
 <p>2015-02-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/attribute.c (GenerateEXIFAttribute): Fix crash while
+parsing corrupt EXIF which was reported by Stijn Sanders on
+2015-02-17.</li>
 <li>Magick++/lib/{Blob.cpp, Image.cpp}: Incorrect lock scope
 resulted in Magick++ locking not actually working to protect
 critical sections in spite of no detected problems with locking
